Fix highlighting on mobile

--- a/joergens-portfolio/app/globals.css
+++ b/joergens-portfolio/app/globals.css
@@ -12,6 +12,18 @@ footer {
 a {
   color: inherit;
   text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+}
+
+a:focus{
+  outline: none !important;
 }
 
 a:hover {
@@ -95,14 +107,6 @@ footer {
   }
 }
 
-/* .toggle-button {
-  display: none;
-}
-
-.exit-button {
-  display: none;
-} */
-
 .title {
   font-size: 2rem;
   justify-items: center;
@@ -125,7 +129,10 @@ footer {
 }
 
 /* Hide blue highlights on buttons */
-.noSelect {
+button {
+  color: inherit;
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -135,7 +142,7 @@ footer {
   cursor: default;
 }
 
-.noSelect:focus {
+button:focus{
   outline: none !important;
 }
 
